--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,7 +11,7 @@ COPY package*.json ./
 RUN npm install
 
 # Copy the current directory contents into the container at /app
-COPY . .
+COPY backend/* .
 
 # Make port 3000 available to the world outside this container
 EXPOSE 3000
