--- a/frontend/public/Dockerfile
+++ b/frontend/public/Dockerfile
@@ -2,8 +2,8 @@
 FROM nginx:latest
 
 # Copy the contents of the 'public' folder to the default Nginx public directory
-COPY . /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY frontend/public/index.html /usr/share/nginx/html
+COPY frontend/public/nginx.conf /etc/nginx/conf.d/default.conf
 
 
 EXPOSE 8080
